add show party in main page

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -10,6 +10,14 @@
     z-index: 1;
 }
 
+.headerSpace {
+    display: flex;
+    justify-content: space-between; /* 버튼을 왼쪽, 가운데, 오른쪽에 배치 */
+    align-items: center; /* 버튼을 수직 가운데에 배치 */
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
 .pad {
     position: relative;
     padding-top: 3rem;
